# job-pool

./: Cargo.toml  README  build.rs
examples/: bindings-test.c  example.rs  scopes.rs
src/: config.rs  ffi.rs  lib.rs  pool.rs  scope.rs  worker.rs
src/channel/: mpmc.rs  mpsc.rs
tests/: config_test.rs  pool_tests.rs
