[package]
name = "job-pool"
description = "Thread Pool"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
version = "0.2.1"
edition = "2024"
license = "GPL-3.0-only"
readme = "README"
repository = "https://github.com/saulvaldelvira/job-pool"

[lib]
name = "job_pool"
path = "src/lib.rs"
crate-type = [ "lib", "cdylib", "staticlib" ]

[dependencies.builders]
version = ">=0.1.10"
default-features = false
features = ["builder"]
git = "https://github.com/saulvaldelvira/builders"

[build-dependencies.cbindgen]
version = "0.27.0"
default-features = false
optional = true

[features]
default = []
bindings = ["dep:cbindgen"]

[build-dependencies]
rustc_version = "0.4.1"

