[package]
name = "job-pool"
description = "Thread Pool"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
version = "0.5.0"
edition = "2024"
license = "GPL-3.0-only"
readme = "README"
repository = "https://github.com/saulvaldelvira/job-pool"

[lib]
name = "job_pool"
path = "src/lib.rs"
crate-type = [ "lib", "cdylib", "staticlib" ]

[build-dependencies.cbindgen]
version = "0.27.0"
default-features = false
optional = true

[features]
default = []
use-nightly-mpmc = []
bindings = ["dep:cbindgen"]

